--- a/Week_Second/fe/TestAngular/src/app/Components/Student/ListStudent/student.component.html
+++ b/Week_Second/fe/TestAngular/src/app/Components/Student/ListStudent/student.component.html
@@ -57,6 +57,7 @@
     <div class="row">
       <div class="col-lg-2 col-md-4 col-sm-6 mb-3" *ngFor="let s of listStudent">
         <div class="card d-flex flex-column h-100" style="width: 100%;">
+          <button type="button" (click)="openToDelete(content, s)" class="delete-student">X</button>
           <img [src]="s.avatar" class="card-img-top" [alt]="s.name" style="width: 100%; height: 140px;" (click)="openDetailStudent(s.id!)">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title mb-6">{{s.name}} - {{s.age}} years old</h5>
