--- a/Week_Second/fe/TestAngular/src/app/Components/ClassRoom/ListClassroom/classroom.component.html
+++ b/Week_Second/fe/TestAngular/src/app/Components/ClassRoom/ListClassroom/classroom.component.html
@@ -21,6 +21,7 @@
         <th scope="col">
           <button type="button" class="btn btn-danger" (click)="openFormDeleteClass(content, class.id, class.className, class.email, class.establishmentDate)">Delete</button>
           <button type="button" class="btn btn-warning m-1" (click)="openFormUpdateClass(content, class.id, class.className, class.email, class.establishmentDate)">Update</button>
+          <button type="button" class="btn btn-primary m-1" (click)="openListStudent(class.id)">List Student</button>
         </th>
       </tr>
     </tbody>
