--- a/Week_Second/fe/TestAngular/src/app/Components/Student/ListStudent/student.component.scss
+++ b/Week_Second/fe/TestAngular/src/app/Components/Student/ListStudent/student.component.scss
@@ -61,6 +61,7 @@ $button-disabled-color: #6c757d;
     top: 0px;
     right: 0px;
     background-color: rosybrown;
+    cursor: pointer;
 
     &:hover {
       background-color: red;
