--- a/Week_Second/fe/TestAngular/src/app/Components/Student/ListStudent/student.component.html
+++ b/Week_Second/fe/TestAngular/src/app/Components/Student/ListStudent/student.component.html
@@ -1,15 +1,17 @@
 <div class="container">
     <div class="header row">
       <div class="col-lg-1">
-        <button class="btn btn-outline-primary mb-2" (click)="openToAdd(content)">Add</button>
+        <button class="btn btn-outline-primary mb-2" (click)="openToAdd(content)"> 
+            <ng-icon name="bootstrapPlus"></ng-icon>
+                      Add</button>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-1">
         <input
             mdbInput
             type="text"
             class="form-control"
             id="search-input"
-            placeholder="search by name"
+            placeholder="Name"
             (keyup)="searchByName($event)"
             />
       </div>
@@ -33,13 +35,13 @@
             (keyup)="searchByEmail($event)"
             />
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-1">
         <input
             mdbInput
             type="text"
             class="form-control"
             id="search-input"
-            placeholder="search by id"
+            placeholder="Id"
             (keyup)="searchById($event)"
             />
       </div>
@@ -53,17 +55,35 @@
             (keyup)="searchByAddress($event)"
             />
       </div>
+      <div class="col-lg-2">
+        <input
+            mdbInput
+            type="date"
+            class="form-control"
+            id="search-input"
+            (input)="searchByDateStart($event)"
+            />
+      </div>
+      <div class="col-lg-2">
+        <input
+            mdbInput
+            type="date"
+            class="form-control"
+            id="search-input"
+            (input)="searchByDateEnd($event)"
+            />
+      </div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-md-4 col-sm-6 mb-3" *ngFor="let s of listStudent | paginate: {itemsPerPage: pageSize, currentPage: currentPage, totalItems: totalElements}">
         <div class="card d-flex flex-column h-100" style="width: 100%;">
-          <button type="button" (click)="openToDelete(content, s)" class="delete-student">X</button>
+          <button type="button" (click)="openToDelete(delete, s)" class="delete-student">X</button>
           <img [src]="s.avatar" class="card-img-top" [alt]="s.name" style="width: 100%; height: 140px;" (click)="openDetailStudent(s.id!)">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title mb-6">{{s.name}} - {{s.age}} years old</h5>
             <div class="button-contaniner mt-auto row" style="height: 40px;">
-                <button type="button" (click)="openDetailStudent(s.id!)" class="btn btn-primary col-lg-5 col-md-4 col-sm-6">Xem</button>
-                <button type="button" (click)="openToUpdate(content, s)" class="btn btn-warning col-lg-6 col-md-4 col-sm-6 ms-2">Cập nhật</button>
+                <button type="button" (click)="openDetailStudent(s.id!)" class="btn btn-primary col-lg-3 col-md-4 col-sm-6"><ng-icon name="bootstrapEyeFill"></ng-icon></button>
+                <button type="button" (click)="openToUpdate(content, s)" class="btn btn-warning col-lg-8 col-md-4 col-sm-6 ms-2"><ng-icon name="bootstrapBoxArrowInDown"></ng-icon>Update</button>
             </div>
           </div>
         </div>
@@ -87,7 +107,6 @@
     <div class="modal-header">
       <h4 *ngIf="action === 'Add'" class="modal-title" id="modal-basic-title">Add student</h4>
       <h4 *ngIf="action === 'Update'" class="modal-title" id="modal-basic-title">Update student</h4>
-      <h4 *ngIf="action === 'Delete'" class="modal-title" id="modal-basic-title">You sure you want to delete this student?</h4>
       <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
@@ -123,15 +142,26 @@
         <div class="mb-3">
           <label for="classroom" class="form-label">Class room</label>
           <select type="text" class="form-control" id="classroom" required [(ngModel)]="student.classroom" name="classroom">
+            <option [ngValue]="null"  [selected]="true"><p style="color: rgb(224, 224, 224);">Choose classroom</p></option>
             <option *ngFor="let cl of listClass" [ngValue]="cl.id">{{ cl.className }}</option>
-          </select>
+        </select>
         </div>
       </form>
     </div>
     <div class="modal-footer">
-      <button *ngIf="action === 'Add'" type="button" class="btn btn-primary" (click)="addStudent()">Save</button>
-      <button *ngIf="action === 'Update'" type="button" class="btn btn-warning" (click)="updateStudent()">Update</button>
-      <button *ngIf="action === 'Delete'" type="button" class="btn btn-danger" (click)="deleteStudent()">Delete</button>
+      <button *ngIf="action === 'Add'" type="button" class="btn btn-primary" (click)="addStudent()"><ng-icon name="bootstrapSave"></ng-icon>Save</button>
+      <button *ngIf="action === 'Update'" type="button" class="btn btn-warning" (click)="updateStudent()"><ng-icon name="bootstrapBoxArrowInDown"></ng-icon>Update</button>
+      <button type="button" class="btn" (click)="modal.dismiss('Cancel')">Cancel</button>
+    </div>
+  </ng-template>
+
+
+  <ng-template #delete let-modal>
+    <div class="modal-header">
+      <h4>You sure You want to delele this student?</h4>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-danger" (click)="deleteStudent()"><ng-icon name="bootstrapTrash"></ng-icon>Delete</button>
       <button type="button" class="btn" (click)="modal.dismiss('Cancel')">Cancel</button>
     </div>
   </ng-template>
