--- a/Week_Second/fe/TestAngular/src/styles.scss
+++ b/Week_Second/fe/TestAngular/src/styles.scss
@@ -7,3 +7,23 @@
 @import 'bootstrap/scss/mixins';
 @import 'ngx-toastr/toastr-bs5-alert';
 
+body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background: linear-gradient(to right, #f3e5ab, #f5d0a9, #f8b195, #e2808a, #ffcddb);
+    background-size: 300% 300%;
+    animation: gradientAnimation 10s ease infinite;
+}
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
