--- a/Week_Second/fe/TestAngular/src/app/app.component.html
+++ b/Week_Second/fe/TestAngular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center" style="height: 52px;">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link" routerLink="">Student</a>
+      <a class="nav-link" routerLink="student">Student</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="class">Class</a>
